@@ -6,6 +6,7 @@ original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfi
 NOTE : this modified version is still under the Artistic License 2.0
 
 - Overhauled the location recognition engine to accommodate the in-game mechanics of Update 35.
+- Adjusted location database of Vivec City.
 
 Version 1.6.87 : by Calamath
 [LorePlay]:High Isle support
